--- a/ruoyi-exam/pom.xml
+++ b/ruoyi-exam/pom.xml
@@ -27,6 +27,10 @@
             <version>1.6.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-system</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
