--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -155,6 +155,11 @@
             <version>1.18.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.20</version>
+        </dependency>
     </dependencies>
 
 </project>
